{
    "name": "CameraActions",
    "maps": [
        {
            "name": "InGame",
            "id": "045986fb-25fa-4770-a669-a98784e6334e",
            "actions": [
                {
                    "name": "RotateCamera",
                    "type": "PassThrough",
                    "id": "1a33a015-224e-4863-8571-0eec2f43e565",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Scale",
                    "type": "Button",
                    "id": "ca24f1f3-c7c2-415b-bcd6-0ee3f993cbd5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ade10bf6-9d02-4f43-bb63-2246866e4e8d",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scale",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "52f8b146-aa8f-4e81-a859-793d8641ab36",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}